// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Connector.svelte > When rtl is true property > Should render when type is "child" 1`] = `
<body>
  <div>
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-child"
    >
      <i
        class="border-r grid grid-rows-2 row-span-2"
      >
        <i
          class="border-b"
        />
      </i>
      
    </span>
  </div>
</body>
`;

exports[`Connector.svelte > When rtl is true property > Should render when type is "empty" 1`] = `
<body>
  <div>
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
  </div>
</body>
`;

exports[`Connector.svelte > When rtl is true property > Should render when type is "last" 1`] = `
<body>
  <div>
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
    >
      <i
        class="border-b border-r"
      />
      
    </span>
  </div>
</body>
`;

exports[`Connector.svelte > When rtl is true property > Should render when type is "sibling" 1`] = `
<body>
  <div>
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-sibling"
    >
      <i
        class="border-r row-span-2"
      />
    </span>
  </div>
</body>
`;

exports[`Connector.svelte > given a type > when type is "child" > then it should render the correct elements 1`] = `
<body>
  <div>
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-child"
    >
      <i
        class="border-r col-span-1 row-span-2"
      />
       
      <i
        class="border-b"
      />
      
    </span>
  </div>
</body>
`;

exports[`Connector.svelte > given a type > when type is "empty" > then it should render the correct elements 1`] = `
<body>
  <div>
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
  </div>
</body>
`;

exports[`Connector.svelte > given a type > when type is "last" > then it should render the correct elements 1`] = `
<body>
  <div>
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
    >
      <i
        class="border-r"
      />
       
      <i
        class="border-b"
      />
      
    </span>
  </div>
</body>
`;

exports[`Connector.svelte > given a type > when type is "sibling" > then it should render the correct elements 1`] = `
<body>
  <div>
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-sibling"
    >
      <i
        class="border-r row-span-2"
      />
    </span>
  </div>
</body>
`;
